# computational-algebra

./: .dockerignore  .ghci  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hspec  .hspec-failures  .pre-commit-config.yaml  .stylish-haskell.yaml  .travis.disabled.yml  .travis.yml  Algorithms.hs  BaseTypes.hs  CITATION.cff  CONTRIBUTORS.md  Example.hs  ExpressionParser.hs  Field.hs  HLint.hs  LICENSE  Monomorphic.hs  MonomorphicPolynomial.hs  NoetherianRing.hs  Polynomial.hs  README.md  SingularBench.hs  TAGS  Wrappers.hs  bench-acc.csv  bench-old.csv  bench-simple.html  bench-sized.csv  cabal.project  cabal.sandbox.config  computational-algebra.cabal  config.patch  docs  elim-new.html  hie.yaml  (+43 more)
.github/: FUNDING.yml
Algebra/: Instances.hs  Internal.hs  Linear.hs  LinkedMatrix.hs  Matrix.hs  Prelude.hs  Repa.hs  Scalar.hs  Wrapped.hs
algebraic-prelude/: .gitignore  TAGS  algebraic-prelude.cabal  package.yaml  stack-804.yaml  stack.yaml
algebraic-prelude/examples/: sandpit.hs
algebraic-prelude/src/: AlgebraicPrelude.hs
app/: Instances.hs  Lenses.hs  Main.hs  Settings.hs
bench/: SingularBench.hs  bench.hs  coercion.hs  division.hs  elimination-bench.hs  faugere4.hs  linear.hs  monomial.html  monomials.hs  quotient-bench-randomized.hs  quotient-bench.hs  solve.hs  sugar-bench.hs  sugar-paper.hs  sugar.hs  unipol-bench.hs  unipol-div.hs  unipol-mult.hs
bench-results/: singular-bench.txt  sugar-paper-bench-new.txt  sugar-paper-bench-vect.txt  sugar-paper-hash-gauss.csv  sugar-paper-map-polys.txt  sugar-paper-monomial-factor.txt  sugar-paper-orig-non-hashcons.csv
benchmarks/: F4-bench.html  unipol-bench.html  unipol-div--10---10.txt  unipol-div--10---5.txt  unipol-div--100---100.txt  unipol-div--100---50.txt  unipol-div--1000---1000.txt  unipol-div--1000---500.txt  unipol-div--200---100.txt  unipol-div--5---2.txt  unipol-div--5---5.txt  unipol-div--500---250.txt  unipol-div.html  unipol-mult.html
computational-algebra/: .gitignore  ChangeLog.md  README.md  TAGS  computational-algebra.cabal  package.yaml
config/: schemes.yml
data/: conway.txt
doc/: Algebra-Internal.html  Algebra-Ring-Polynomial-Parser.html  doc-index-37.html  doc-index-58.html  doc-index-All.html  doc-index-B.html  doc-index-D.html  doc-index-F.html  doc-index-I.html  doc-index-N.html  doc-index-P.html  index.html  mini_Algebra-Algorithms-Groebner.html  mini_Algebra-Ring-Noetherian.html  mini_Algebra-Ring-Polynomial-Monomorphic.html  mini_Algebra-Ring-Polynomial-Parser.html
docs/: algebra-4.3  algebraic-prelude-0.1.0.0  computational-algebra-0.4.0.0  doc-index-124.html  doc-index-33.html  doc-index-36.html  doc-index-37.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-92.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  (+9 more)
examples/: bench.hs  bench.html  elimination-bench.hs  faugere-prof.hs  groebner-prof.hs  hensel-prof.hs  ipsolve.hs  monomorphic.hs  poly-02.hs  polymorphic.hs  quotient.hs  sandpit-poly.hs  sandpit.hs  site-example.hs  solve-prof.hs  solve.hs  strum.hs  sugar-bench.hs  sugar-disabled.html  sugar-paper-bench.html  sugar-paper-simple.html  sugar-paper.hs  sugar-paper.html  sugar.hs
factor-hensel/: TAGS  factor-hensel.cabal
factor-hensel/app/: Main.hs
factor-hensel/src/Algebra/Ring/Polynomial/Factorise/: Hensel.hs
halg-algebraic/: .gitignore  ChangeLog.md  README.md  TAGS  halg-algebraic.cabal  package.yaml
halg-algorithms/: .dir-locals.el  .gitignore  ChangeLog.md  README.md  TAGS  cabal.project  halg-algorithms.cabal  heavy-bench-f4.csv  heavy-f5.csv  package.yaml  sugar-paper-intern-pol.csv
halg-bridge-singular/: .dir-locals.el  .gitignore  ChangeLog.md  README.md  TAGS  halg-bridge-singular.cabal  package.yaml
halg-containers/: .gitignore  ChangeLog.md  README.md  TAGS  package.yaml
halg-core/: .dir-locals.el  .gitignore  ChangeLog.md  README.md  TAGS  cabal.project  halg-core.cabal  package.yaml
halg-core-test/: .gitignore  ChangeLog.md  README.md  TAGS  halg-core-test.cabal  package.yaml
halg-factor/: .gitignore  ChangeLog.md  README.md  TAGS  halg-factor.cabal  package.yaml
halg-finite-fields/: .gitignore  README.md  TAGS  package.yaml
halg-galois-fields/: ChangeLog.md  LICENSE  TAGS  halg-galois-fields.cabal  package.yaml
halg-heaps/: .gitignore  ChangeLog.md  README.md  TAGS  halg-heaps.cabal  package.yaml
halg-matrices/: .gitignore  ChangeLog.md  README.md  TAGS  cabal.project  halg-matrices.cabal  package.yaml
halg-partial-fraction/: ChangeLog.md  README.md  halg-partial-fraction.cabal  package.yaml
halg-polyn-parser/: .dir-locals.el  .gitignore  ChangeLog.md  README.md  TAGS  halg-polyn-parser.cabal  package.yaml
halg-polynomials/: .gitignore  ChangeLog.md  README.md  TAGS  cabal.project  halg-polynomials.cabal  package.yaml
images/: homla-logo.ai
javascripts/: prerender.js
katex/: mathtex-script-type.js
misc/: test.c5
profile/: mult-table-lazy-map.hp  mult-table-lazy-map.prof  mult-table-prof.aux  mult-table-prof.hp  mult-table-prof.hs  mult-table-prof.prof  mult-table-prof.ps
profiling-results/: f5-prof.html  f5-prof.new.html  f5-prof.ps
scripts/: dhall-to-yaml.sh
share/: HspecSmallCheck.hs  Instances.hs  SequenceMonomial.hs  SingularBridge.hs  Utils.hs
src/: Lenses.hs  Main.hs
stylesheets/: stylesheet.css  syntax.css
templates/: default.html
tests/: Faugere5Spec.hs  GroebnerSpec.hs  PolynomialSpec.hs  QuotientSpec.hs  SingularTest.hs  UnivariateSpec.hs  ZeroDimSpec.hs  division.hs  linear.hs  matrix.hs  monomials.hs  multi-table.hs
wiki/: Algebra-Algorithms-Groebner-Monomorphic.html  (+6 more)
(+3540 files in other folders)
