name: computational-algebra
version: 0.4.0.0
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (C) Hiromi ISHII 2013
maintainer: konn.jinro_at_gmail.com
homepage: https://github.com/konn/computational-algebra
synopsis: Well-kinded computational algebra library, currently supporting Groebner basis.
description: Dependently-typed computational algebra library for Groebner basis.
category: Math
author: Hiromi ISHII
data-dir: ""
tested-with:        GHC == 7.10.3, GHC == 8.0.1
extra-source-files: README.md examples/*.hs tests/*.hs bench/*.hs
                    share/*.hs data/conway.txt
 
source-repository head
    type: git
    location: git://github.com/konn/computational-algebra.git
 
flag examples
    Default: False
 
library
    build-depends:     repa                 >= 3.3
                     , repa-algorithms      >= 3.3
                     , template-haskell     -any
                     , MonadRandom          >= 0.1
                     , mwc-random
                     , mwc-random-monad
                     , algebraic-prelude    >= 0.1
                     , algebra              >= 4.1
                     , base                 >= 4
                     , semigroups           >= 0.15
                     , containers           >= 0.5
                     , convertible          >= 1.1
                     , constraints          >= 0.3
                     , deepseq              >= 1.3
                     , equational-reasoning >= 0.4.1.1
                     , hashable             >= 1.1
                     , heaps                >= 0.3
                     , hmatrix              >= 0.16
                     , trifecta             >= 1.5
                     , matrix               >= 0.3
                     , lens                 >= 4.13
                     , monad-loops          >= 0.4
                     , dlist
                     , monomorphic          >= 0.0.3
                     , mtl                  >= 2.1
                     , reflection           >= 2
                     -- , sized-vector         >= 1.4
                     , sized                == 0.2.*
                     , tagged               >= 0.7
                     , hybrid-vectors       >= 0.1
                     , text                 >=0.11
                     , type-natural         >= 0.7.1 && < 0.8
                     , unamb                >= 0.2
                     , unordered-containers >= 0.2
                     , vector               >= 0.10
                     -- , sparse               >= 0.9
                     , parallel             >= 3.2
                     , hybrid-vectors       >=0.1
                     , vector-algorithms
                     , mono-traversable     >= 0.10
                     , control-monad-loop   >=0.1
                     , primes               >= 0.2.1
                     , singletons == 2.2.*
                     , arithmoi
    exposed-modules:   Algebra.Algorithms.Faugere4 Algebra.LinkedMatrix
                       Algebra.Algorithms.Faugere5 Algebra.Algorithms.Groebner
                       Algebra.Algorithms.ZeroDim Algebra.Field.Galois
                       Algebra.Ring.Ideal Algebra.Normed
                       Algebra.Ring.Polynomial
                       Algebra.Ring.Polynomial.Univariate
                       -- Algebra.Ring.Polynomial.Monomorphic
                       Algebra.Repa Algebra.Ring.Polynomial.Quotient
                       -- Algebra.Ring.Polynomial.Parser
                       Algebra.Field.Finite
                       Algebra.Scalar Algebra.Internal Algebra.Instances
                       Algebra.Matrix Algebra.Prelude Algebra.Algorithms.Signature
                       Algebra.Ring.Polynomial.Factorize
                       Algebra.Algorithms.PrimeTest Algebra.Algorithms.ChineseRemainder
                       Algebra.Ring.Polynomial.Class
                       Algebra.Ring.Polynomial.Labeled
                       Algebra.Ring.Polynomial.Monomial
    exposed:           True
    buildable:         True
    other-modules:     Algebra.Algorithms.FGLM Algebra.Field.Galois.Internal Algebra.Field.Galois.Conway
    ghc-options:      -O2 -Wall -Wno-unused-top-binds
    extensions:       CPP
                    , DataKinds
                    , PolyKinds
                    , GADTs
                    , MultiParamTypeClasses
                    , TypeFamilies
                    , FlexibleContexts
                    , FlexibleInstances
                    , UndecidableInstances
                    , NoImplicitPrelude
                    , RebindableSyntax
 
executable groebner-prof
  buildable: False
  hs-source-dirs: share examples
  Main-is:             groebner-prof.hs
  build-depends:       base
                     , computational-algebra
                     , deepseq
  default-language:    Haskell2010
  ghc-options:         -Wall -prof -fprof-auto -threaded -O2
  extensions: NoImplicitPrelude


executable solve
    build-depends: semigroups >= 0.15.2,
                   constraints >=0.3, algebra >= 4.1,
                   base >=4, type-natural,
                   computational-algebra -any, random >= 1.0,
                   hmatrix, matrix >= 0.3,
                   sized,
                   vector >= 0.10, convertible >= 1.1, lens >= 3.9,
                   MonadRandom >= 0.1
     
    if flag(examples)
        buildable: True
    else
        buildable: False
    main-is: solve.hs
    buildable: True
    hs-source-dirs: share examples
    ghc-options: -caf-all -auto-all -rtsopts -O2 -threaded

executable strum
    build-depends: semigroups >= 0.15.2,
                   constraints >=0.3, algebra >= 4.1,
                   base >=4, type-natural,
                   computational-algebra -any, random >= 1.0,
                   hmatrix, matrix >= 0.3,
                   sized,
                   arithmoi,
                   vector >= 0.10, convertible >= 1.1, lens >= 3.9,
                   MonadRandom >= 0.1
     
    if flag(examples)
        buildable: True
    else
        buildable: False
    main-is: strum.hs
    buildable: True
    hs-source-dirs: share examples
    ghc-options: -caf-all -auto-all -rtsopts -O2 -threaded
 
executable ipsolve
    build-depends: semigroups >= 0.15.2,
                   parallel >= 3.2, constraints >=0.3,
                   algebra >= 4.1, equational-reasoning >= 0.2,
                   reflection >=1.4, base >=4, type-natural,
                   computational-algebra -any, random >= 1.0,
                   hmatrix, matrix >= 0.3, sized,
                   vector >= 0.10, convertible >= 1.1, lens >= 3.9,
                   MonadRandom >= 0.1, singletons
     
    if flag(examples)
        buildable: True
    else
        buildable: False
    main-is: ipsolve.hs
    buildable: True
    hs-source-dirs: share examples
    ghc-options: -caf-all -auto-all -rtsopts -O2 -threaded
 
executable faugere-prof
    build-depends: criterion >= 0.8.1.0,
                   semigroups >= 0.15.2,
                   constraints >=0.3, algebra,
                   base >=4, type-natural,
                   computational-algebra -any, random >= 1.0,
                   hmatrix, matrix >= 0.3, sized,
                   vector >= 0.10, convertible >= 1.1, lens >= 3.9,
                   deepseq >= 1.3, MonadRandom >= 0.1
     
    if flag(examples)
        buildable: True
    else
        buildable: False
    main-is: faugere-prof.hs
    buildable: True
    hs-source-dirs: share examples
    ghc-options: -caf-all -auto-all -rtsopts -O2 -threaded

executable hensel-prof
    build-depends: criterion >= 0.8.1.0,
                   semigroups >= 0.15.2,
                   constraints >=0.3, algebra,
                   base >=4, type-natural,
                   computational-algebra -any, random >= 1.0,
                   hmatrix, matrix >= 0.3,  sized,
                   vector >= 0.10, convertible >= 1.1, lens >= 3.9,
                   deepseq >= 1.3, MonadRandom >= 0.1
     
    if flag(examples)
        buildable: True
    else
        buildable: False
    main-is: hensel-prof.hs
    buildable: True
    hs-source-dirs: share examples
    ghc-options: -caf-all -auto-all -rtsopts -O2 -threaded -eventlog

executable sandpit-poly
    build-depends: semigroups >= 0.15.2,
                   constraints >=0.3, computational-algebra -any,
                   base >=4, type-natural, algebra,
                   sized
     
    if flag(examples)
        buildable: True
    else
        buildable: False
    main-is: sandpit-poly.hs
    buildable: True
    hs-source-dirs: share examples


executable quotient
    build-depends: semigroups >= 0.15.2,
                   constraints >=0.3, computational-algebra -any,
                   base >=4, type-natural, algebra,
                   sized,
                   reflection
     
    if flag(examples)
        buildable: True
    else
        buildable: False
    main-is: quotient.hs
    buildable: True
    hs-source-dirs: share examples
 
test-suite test-multi-table
    build-depends: constraints >=0.3, HUnit >=1.2.5.2,
                   QuickCheck >= 2.6, algebra, base >=4,
                   computational-algebra -any, containers >= 0.5,
                   hspec >=1.9.5, lazysmallcheck >= 0.6, lens >= 3.9,
                   quickcheck-instances >=0.3.8, reflection >=1.4,
                   sized,
                   smallcheck >=1.1.1,
                   tagged >= 0.7, test-framework >=0.8.0.3,
                   test-framework-hunit >=0.3.0.1, transformers >= 0.3,
                   type-natural, vector >= 0.10,
                   equational-reasoning >= 0.2
    type: exitcode-stdio-1.0
    main-is: multi-table.hs
    buildable: False
    hs-source-dirs: tests share
    other-modules: Utils
    ghc-options: -Wall -threaded

test-suite singular-test
    main-is: SingularTest.hs
    type: exitcode-stdio-1.0
    buildable: False
    hs-source-dirs: tests share
    other-modules: Utils SingularBridge
    ghc-options: -Wall -threaded
    build-depends: algebra, constraints >=0.3, HUnit -any,
                   MonadRandom >= 0.1, QuickCheck >= 2.6, base >=4,
                   computational-algebra -any, containers >= 0.5,
                   deepseq >= 1.3, hspec -any, monomorphic >=0.0.3,
                   smallcheck -any, test-framework -any, test-framework-hunit -any,
                   vector >= 0.10, equational-reasoning >= 0.2,
                   quickcheck-instances >= 0.3.8,
                   type-natural,sized,
                   reflection, tagged, lens, matrix, text, singletons

test-suite monomial-order-test
    build-depends: constraints >=0.3, HUnit -any,
                   MonadRandom >= 0.1, QuickCheck >= 2.6, base >=4,
                   computational-algebra -any, containers >= 0.5,
                   deepseq >= 1.3, hspec -any, monomorphic >=0.0.3,
                   smallcheck -any, test-framework -any, test-framework-hunit -any,
                   vector >= 0.10, equational-reasoning >= 0.2,
                   sized
    type: exitcode-stdio-1.0
    main-is: monomials.hs
    buildable: False
    hs-source-dirs: tests share
    other-modules: Utils
    ghc-options: -Wall -threaded
test-suite linear-test
    build-depends: constraints >=0.3, HUnit -any,
                   MonadRandom >= 0.1, QuickCheck >= 2.6, algebra,
                   base >=4, computational-algebra -any, containers >= 0.5,
                   deepseq >= 1.3, hspec -any, lens >= 3.9,
                   monomorphic >=0.0.3, quickcheck-instances -any,
                   reflection >=1.4,
                   sized,
                   smallcheck -any,
                   tagged >= 0.7, test-framework -any, test-framework-hunit -any,
                   type-natural, vector >= 0.10,
                   equational-reasoning >= 0.2, matrix >= 0.3
    type: exitcode-stdio-1.0
    main-is: linear.hs
    buildable: True
    hs-source-dirs: tests share
    other-modules: Utils
    ghc-options: -Wall -threaded
test-suite matrix-test
    build-depends: constraints >=0.3, HUnit -any,
                   MonadRandom >= 0.1, QuickCheck >= 2.6, algebra,
                   base >=4, computational-algebra -any, containers >= 0.5,
                   deepseq >= 1.3, hspec -any, lens >= 3.9,
                   monomorphic >=0.0.3, quickcheck-instances -any,
                   reflection >=1.4,
                   sized,
                   smallcheck -any,
                   tagged >= 0.7, test-framework -any, test-framework-hunit -any,
                   type-natural, vector >= 0.10, matrix >= 0.3,
                   equational-reasoning >= 0.2
    type: exitcode-stdio-1.0
    main-is: matrix.hs
    buildable: False
    hs-source-dirs: tests share
    other-modules: Utils
    ghc-options: -Wall -threaded
test-suite specs
    build-depends: constraints >=0.3, HUnit -any,
                   MonadRandom >= 0.1, QuickCheck >= 2.6, algebra,
                   base >=4, computational-algebra -any, containers >= 0.5,
                   deepseq >= 1.3, hspec -any, lens >= 3.9,
                   monomorphic >=0.0.3, quickcheck-instances -any,
                   reflection >=1.4,
                   sized,
                   smallcheck -any,
                   tagged >= 0.7, test-framework -any, test-framework-hunit -any,
                   type-natural, vector >= 0.10,convertible,
                   equational-reasoning >= 0.2, process >=1.1,
                   text >= 0.11, singletons, matrix >= 0.3
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    hs-source-dirs: tests share
    other-modules: Utils UnivariateSpec GroebnerSpec ZeroDimSpec
                   QuotientSpec PolynomialSpec SingularBridge
                   -- Faugere5Spec
    ghc-options: -Wall -threaded
test-suite new-div-test
    build-depends: constraints >=0.3, HUnit -any,
                   MonadRandom >= 0.1, QuickCheck >= 2.6, algebra,
                   base >=4, computational-algebra -any, containers >= 0.5,
                   deepseq >= 1.3, hspec -any, lens >= 3.9,
                   monomorphic >=0.0.3, quickcheck-instances -any,
                   reflection >=1.4, smallcheck -any,
                   tagged >= 0.7, test-framework -any, test-framework-hunit -any,
                   type-natural, vector >= 0.10,
                   equational-reasoning >= 0.2, matrix >= 0.3
    type: exitcode-stdio-1.0
    main-is: division.hs
    buildable: False
    hs-source-dirs: tests share
    other-modules: Utils
    ghc-options: -Wall -threaded
 
benchmark unipol-bench
    build-depends: constraints >=0.3, algebra,
                   base >=4, computational-algebra -any, containers >= 0.5,
                   criterion >= 0.8.1.0, deepseq >= 1.3, parallel >= 3.2,
                   process >=1.1, singletons, sized,
                   type-natural, vector >= 0.10, matrix >= 0.3
    type: exitcode-stdio-1.0
    main-is: unipol-bench.hs
    hs-source-dirs: bench share
    ghc-options: -O2 -threaded -rtsopts

benchmark normal-bench
    build-depends: constraints >=0.3, algebra,
                   base >=4, computational-algebra -any, containers >= 0.5,
                   criterion >= 0.8.1.0, deepseq >= 1.3, parallel >= 3.2,
                   process >=1.1, singletons, sized,
                   type-natural, vector >= 0.10, matrix >= 0.3
    type: exitcode-stdio-1.0
    main-is: bench.hs
    -- buildable: False
    hs-source-dirs: bench share
    other-modules: SingularBench
    ghc-options: -O2 -threaded -rtsopts
benchmark elimination-bench
    build-depends: constraints >=0.3, algebra,
                   base >=4, computational-algebra -any, containers >= 0.5,
                   criterion >= 0.8.1.0, deepseq >= 1.3, parallel >= 3.2,
                   process >=1.1, singletons, sized,
                   type-natural, vector >= 0.10, matrix >= 0.3
    type: exitcode-stdio-1.0
    main-is: elimination-bench.hs
    buildable: False
    hs-source-dirs: bench share
    other-modules: SingularBench
    ghc-options: -O2 -threaded -rtsopts
benchmark quotient-bench-randomized
    build-depends: constraints >=0.3, QuickCheck >= 2.6,
                   algebra, base >=4, computational-algebra -any,
                   containers >= 0.5, criterion >= 0.8.1.0, deepseq >= 1.3,
                   lens >= 3.9, parallel >= 3.2, process >=1.1,
                   quickcheck-instances -any, reflection >=1.4,
                   singletons, smallcheck -any, sized,
                   tagged >= 0.7, transformers >= 0.3,
                   type-natural, vector >= 0.10, matrix >= 0.3,
                   equational-reasoning >= 0.2, monomorphic >=0.0.3
    type: exitcode-stdio-1.0
    main-is: quotient-bench-randomized.hs
    buildable: True
    hs-source-dirs: bench share
    other-modules: SingularBench Utils
    ghc-options: -O2 -threaded -rtsopts
benchmark monomial-order-bench
    build-depends: constraints >=0.3, QuickCheck >= 2.6,
                   algebra, base >=4, computational-algebra -any,
                   containers >= 0.5, criterion >= 0.8.1.0, deepseq >= 1.3,
                   lens >= 3.9, monomorphic >=0.0.3, parallel >= 3.2,
                   process >=1.1, quickcheck-instances -any, random >= 1.0,
                   reflection >=1.4, singletons, sized,
                   smallcheck -any, tagged >= 0.7, transformers >= 0.3,
                   type-natural, vector >= 0.10, matrix >= 0.3
    type: exitcode-stdio-1.0
    main-is: monomials.hs
    buildable: False
    hs-source-dirs: bench share
    other-modules: SingularBench Utils
    ghc-options: -O2 -threaded -rtsopts

benchmark linear-bench
    build-depends: constraints >=0.3, HUnit -any,
                   MonadRandom >= 0.1, QuickCheck >= 2.6, algebra,  sized,
                   base >=4, computational-algebra -any, containers >= 0.5,
                   criterion >= 0.8.1.0, deepseq >= 1.3, hspec -any, lens >= 3.9,
                   monomorphic >=0.0.3, parallel >= 3.2, process >=1.1,
                   quickcheck-instances -any, reflection >=1.4,
                   smallcheck -any, tagged >= 0.7,
                   test-framework -any, test-framework-hunit -any,
                   type-natural, vector >= 0.10,
                   equational-reasoning >= 0.2, matrix >= 0.3,
                   monomorphic >=0.0.3
    type: exitcode-stdio-1.0
    main-is: linear.hs
    buildable: False
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -O2 -threaded -rtsopts
benchmark division-bench
    build-depends: constraints >=0.3, HUnit -any,
                   MonadRandom >= 0.1, QuickCheck >= 2.6, algebra, sized,
                   base >=4, computational-algebra -any, containers >= 0.5,
                   criterion >= 0.8.1.0, deepseq >= 1.3, hspec -any, lens >= 3.9,
                   monomorphic >=0.0.3, parallel >= 3.2, process >=1.1,
                   quickcheck-instances -any, reflection >=1.4,
                   smallcheck -any, tagged >= 0.7,
                   test-framework -any, test-framework-hunit -any,
                   type-natural, vector >= 0.10,
                   equational-reasoning >= 0.2, matrix >= 0.3,
                   monomorphic >=0.0.3
    type: exitcode-stdio-1.0
    main-is: division.hs
    buildable: False
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -O2 -threaded -rtsopts
benchmark sugar-paper-bench
    build-depends: constraints >=0.3, HUnit -any, sized,
                   MonadRandom >= 0.1, QuickCheck >= 2.6, algebra,
                   base >=4, computational-algebra -any, containers >= 0.5,
                   criterion >= 0.8.1.0, deepseq >= 1.3, hspec -any, lens >= 3.9,
                   monomorphic >=0.0.3, parallel >= 3.2, process >=1.1,
                   quickcheck-instances -any, reflection >=1.4,
                   smallcheck -any, tagged >= 0.7,
                   test-framework -any, test-framework-hunit -any,
                   type-natural, vector >= 0.10,
                   equational-reasoning >= 0.2, matrix >= 0.3,
                   monomorphic >=0.0.3
    type: exitcode-stdio-1.0
    main-is: sugar-paper.hs
    buildable: True
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -O2 -threaded -rtsopts
benchmark solve-bench
    build-depends: constraints >=0.3, HUnit -any, sized,
                   MonadRandom >= 0.1, QuickCheck >= 2.6, algebra,
                   base >=4, computational-algebra -any, containers >= 0.5,
                   criterion >= 0.8.1.0, deepseq >= 1.3, hspec -any, lens >= 3.9,
                   monomorphic >=0.0.3, parallel >= 3.2, process >=1.1,
                   quickcheck-instances -any, reflection >=1.4,
                   smallcheck -any, tagged >= 0.7,
                   test-framework -any, test-framework-hunit -any,
                   type-natural, vector >= 0.10, random >= 1.0,
                   equational-reasoning >= 0.2,
                   matrix >= 0.3
    type: exitcode-stdio-1.0
    main-is: solve.hs
    buildable: True
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -O2 -threaded -rtsopts
benchmark coercion-bench
    build-depends: constraints >=0.3, HUnit -any, sized,
                   MonadRandom >= 0.1, QuickCheck >= 2.6, algebra,
                   base >=4, computational-algebra -any, containers >= 0.5,
                   criterion >= 0.8.1.0, deepseq >= 1.3, hspec -any, lens >= 3.9,
                   monomorphic >=0.0.3, parallel >= 3.2, process >=1.1,
                   quickcheck-instances -any, reflection >=1.4,
                   smallcheck -any, tagged >= 0.7,
                   test-framework -any, test-framework-hunit -any,
                   type-natural, vector >= 0.10, random >= 1.0,
                   equational-reasoning >= 0.2,
                   matrix >= 0.3
    type: exitcode-stdio-1.0
    main-is: coercion.hs
    buildable: False
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -Wall -O2 -threaded -rtsopts

benchmark faugere4-bench
    build-depends: constraints >=0.3, HUnit -any, sized,
                   QuickCheck >= 2.6, algebra, base >=4,
                   computational-algebra -any, containers >= 0.5, criterion >= 0.8.1.0,
                   deepseq >= 1.3, hspec -any, lens >= 3.9,
                   monomorphic >=0.0.3, parallel >= 3.2, process >=1.1,
                   quickcheck-instances -any, reflection >=1.4,
                   smallcheck -any, tagged >= 0.7,
                   test-framework -any, test-framework-hunit -any,
                   type-natural, vector >= 0.10, random >= 1.0,
                   equational-reasoning >= 0.2, matrix >= 0.3
    type: exitcode-stdio-1.0
    main-is: faugere4.hs
    buildable: True
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -Wall -O2 -threaded -rtsopts

benchmark unipol-mult-bench
    build-depends: constraints >=0.3, HUnit -any, sized,
                   QuickCheck >= 2.6, algebra, base >=4,
                   computational-algebra -any, containers >= 0.5, criterion >= 0.8.1.0,
                   deepseq >= 1.3, hspec -any, lens >= 3.9,
                   monomorphic >=0.0.3, parallel >= 3.2, process >=1.1,
                   quickcheck-instances -any, reflection >=1.4,
                   smallcheck -any, tagged >= 0.7,
                   test-framework -any, test-framework-hunit -any,
                   type-natural, vector >= 0.10, random >= 1.0,
                   equational-reasoning >= 0.2, matrix >= 0.3
    type: exitcode-stdio-1.0
    main-is: unipol-mult.hs
    buildable: True
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -Wall -O2 -threaded -rtsopts

benchmark unipol-div-bench
    build-depends: constraints >=0.3, HUnit -any, sized,
                   QuickCheck >= 2.6, algebra, base >=4,
                   computational-algebra -any, containers >= 0.5, criterion >= 0.8.1.0,
                   deepseq >= 1.3, hspec -any, lens >= 3.9,
                   monomorphic >=0.0.3, parallel >= 3.2, process >=1.1,
                   quickcheck-instances -any, reflection >=1.4,
                   smallcheck -any, tagged >= 0.7,
                   test-framework -any, test-framework-hunit -any,
                   type-natural, vector >= 0.10, random >= 1.0,
                   equational-reasoning >= 0.2, matrix >= 0.3
    type: exitcode-stdio-1.0
    main-is: unipol-div.hs
    buildable: True
    hs-source-dirs: bench share
    other-modules: Utils
    ghc-options: -Wall -O2 -threaded -rtsopts
